--- a/app/src/main/res/menu/fragment_photo_gallery.xml
+++ b/app/src/main/res/menu/fragment_photo_gallery.xml
@@ -15,4 +15,10 @@
         app:showAsAction="never" />
 
 
+    <item
+        android:id="@+id/menu_item_toggle_polling"
+        android:title="@string/start_polling"
+        app:showAsAction="ifRoom|withText" />
+
+
 </menu>
